Updated site title

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'SANS Holiday Hack Challenge 2025'
 theme = 'loficode'
 
 [caches]
