--- a/.gitmodules
+++ b/.gitmodules
@@ -2,4 +2,5 @@
 	path = themes/loficode
 	url = https://github.com/raisingpixels/loficode-hugo-theme.git
 [submodule "themes/hugo-theme-relearn"]
+    	path = themes/hugo-theme-relearn
 	url = https://github.com/McShelby/hugo-theme-relearn.git
