--- a/hugo.toml
+++ b/hugo.toml
@@ -7,5 +7,6 @@ theme = 'hugo-theme-relearn'
   [caches.images]
     dir = ':cacheDir/images'
 
-[params]
-  themeVariant = 'zen-dark'
+[[params.themeVariant]]
+  identifier = 'hhc-2025'
+  name = 'Holiday Hack 2025'
